For configuration as third-party lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(METIS C)
 
-set(GKLIB_PATH "${CMAKE_SOURCE_DIR}/GKlib" CACHE PATH "path to GKlib")
+set(GKLIB_PATH "${CMAKE_CURRENT_SOURCE_DIR}/GKlib" CACHE PATH "path to GKlib")
 set(SHARED FALSE CACHE BOOL "build a shared library")
 
 if(MSVC)
@@ -38,8 +38,8 @@ include(${GKLIB_PATH}/GKlibSystem.cmake)
 
 # Add include directories.
 include_directories(${GKLIB_PATH})
-include_directories(build/xinclude)
+include_directories(include)
 # Recursively look for CMakeLists.txt in subdirs.
-add_subdirectory("build/xinclude")
+add_subdirectory("include")
 add_subdirectory("libmetis")
 add_subdirectory("programs")
