--- a/libmetis/CMakeLists.txt
+++ b/libmetis/CMakeLists.txt
@@ -3,7 +3,7 @@ include_directories(.)
 # Find sources.
 file(GLOB metis_sources *.c)
 # Build libmetis.
-add_library(metis ${METIS_LIBRARY_TYPE} ${GKlib_sources} ${metis_sources})
+add_library(metis ${METIS_LIBRARY_TYPE} ${GKlib_sources} ${metis_sources} ../include/metis.h)
 if(UNIX)
   target_link_libraries(metis m)
 endif()
