Add target include dir to solve metis.h cannot found issue

--- a/libmetis/CMakeLists.txt
+++ b/libmetis/CMakeLists.txt
@@ -1,9 +1,11 @@
 # Add this directory for internal users.
 include_directories(.)
+include_directories(../include)
 # Find sources.
 file(GLOB metis_sources *.c)
 # Build libmetis.
-add_library(metis ${METIS_LIBRARY_TYPE} ${GKlib_sources} ${metis_sources} ../include/metis.h)
+add_library(metis ${METIS_LIBRARY_TYPE} ${GKlib_sources} ${metis_sources})
+target_include_directories(metis PUBLIC ../include)
 if(UNIX)
   target_link_libraries(metis m)
 endif()
